[package]
name = "transitions_lib"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucet-wasi = { path = "../../../lucet-spectre/lucet-wasi" }
lucet-runtime = { path = "../../../lucet-spectre/lucet-runtime" }
lucet-runtime-internals = { path = "../../../lucet-spectre/lucet-runtime/lucet-runtime-internals" }
lucet-module = { path = "../../../lucet-spectre/lucet-module" }
cranelift-spectre = { path = "../../../lucet-spectre/wasmtime/cranelift-spectre" }

[lib]
name = "transitions"
crate-type = ["dylib"]